TBD - 1.5.x
- Added the GitHub repository to find new releases due to the issue with savannah.nongnu.org
- New feature: F4 toggles the real time status (on/off).
- Improvements on call identification  management on user input.
- Bugfix: Editing removes QTH and name (Closes issue #113)
- Bugfix: Some complex calls (i.e. F/EA4K) were causing a crash unders some conditions.

March 2021 - 1.5
- Added the 8M & 5M bands.
- New feature: Added "Adif file deletion" checkbox. User can choose to show or not the message boxes after uploading QSOs.
- New feature: New function added to fill automatically the satMode field in satellites Tab depending on upload/download frequencies.
- UI: Added EA5WA as Author. :-)
- New feature: LoTW confirmation is also counted for DXCC & WAZ.
- New feature: DUPES are now identified when coming from WSJTX, ADIF logs, LoTW logs or simply adding a QSO.
- New feature: Added a time period to consider a QSO as DUPE if call, band & mode are also the same. (Closes issue #41)
- Improvement: Hamlib now supports network communication (TNX DG1VS)
- Improvement: Optimized the way DXCC & WAZ are managed.
- Improvement: KLog receives the clear messages from WSJTX and is able to clear the KLog UI.
- Statistics: Added the Grids on Satellites statistics.
- Statistics: Added the DXCC on Satellites statistics.
- UI: Removed the QComboBox of the Setup Log tab to select the log. (TNX G4MKT)
- UI: Added the QSO per log in the logs setup.
- UI: Added a checkbox to keep the Propagation mode, if needed. Propagation mode is also linked to the Satellite tab. (TNX EA5WA)
- UI: Added a Help->Online Manual menu or push F1 to go to the Online Manual (Closes issue #52)
- Bugfix: Improved the way the QSOs come from WSJT-X. (EA5WA)
- Bugfix: Double clicking on a call, while searching made the search to be redefined to that call and the previous search was lost.
- Bugfix: Satellite stats where not properly calculated. (TNX EA5WA)